--- a/frontend/src/stylesheets/_variables.scss
+++ b/frontend/src/stylesheets/_variables.scss
@@ -6,6 +6,11 @@ $color-green-dark : #2EC458;
 $color-green : #78dd79;
 $color-gpastel : #adddb2;
 
+$color-yellow : #FFC702;
+$color-yellow-light : #ffdb5b;
+$color-red : #FF0000;
+$color-red-dark : #b30000;
+
 //text color
 $text-color: white;
 
