--- a/frontend/src/stylesheets/App.scss
+++ b/frontend/src/stylesheets/App.scss
@@ -1,5 +1,6 @@
 @use "reset";
 @use "variables" as v;
+@use "mixins" as m;
 
 html{
   min-height: 100vh;
@@ -10,6 +11,7 @@ html{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-family: "Poppins", sans-serif;
 }
 
 main{
@@ -40,4 +42,41 @@ footer{
   color: v.$primary-color;
 }
 
+button{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  gap: 0.5rem
+}
+
+.btn-green-big {
+  @include m.button(white, v.$color-green, v.$color-gpastel, v.$color-green-dark, 5rem, 3rem);
+  font-family: "Lobster Two", sans-serif;
+  font-size: 2.5rem
+}
+
+.btn-green {
+  @include m.button(white, v.$color-green, v.$color-gpastel, v.$color-green-dark, 5rem, 1rem);
+}
+
+.btn-orange {
+  @include m.button(white, v.$color-orange, v.$orange-light, v.$primary-color, 5rem, 1rem);
+}
+
+.btn-orange-big {
+  @include m.button(white, v.$color-orange, v.$orange-light, v.$primary-color, 5rem, 3rem);
+  font-family: "Lobster Two", sans-serif;
+  font-size: 2.5rem;
+  &:hover{
+    cursor: not-allowed
+  }
+}
+
+.btn-yellow {
+  @include m.button(white, v.$color-yellow, v.$color-yellow-light, v.$color-orange, 5rem, 1rem);
+}
+
+.btn-red {
+  @include m.button(white, v.$color-red, v.$orange-light, v.$color-red-dark, 5rem, 1rem);
+}
 
