💄 🎨 FRONT - few style fixes

--- a/frontend/src/stylesheets/App.scss
+++ b/frontend/src/stylesheets/App.scss
@@ -42,6 +42,11 @@ footer{
   color: v.$primary-color;
 }
 
+.center{
+  margin: auto;
+  width: fit-content;
+}
+
 button{
   display: flex;
   text-align: center;
