--- a/frontend/src/stylesheets/_variables.scss
+++ b/frontend/src/stylesheets/_variables.scss
@@ -9,7 +9,7 @@ $color-gpastel : #adddb2;
 $color-yellow : #FFC702;
 $color-yellow-light : #ffdb5b;
 $color-red : #FF0000;
-$color-red-dark : #b30000;
+$color-red-dark : #ce0000;
 
 //text color
 $text-color: white;
