FRONT _ project detail page for logout users

--- a/frontend/src/stylesheets/ProjectDetail.scss
+++ b/frontend/src/stylesheets/ProjectDetail.scss
@@ -575,3 +575,12 @@
     border-radius: 10px;
     border: none;
 }
+
+.addComment{
+    height: 10rem;
+    background-color: grey;
+    display: flex;
+    align-items: center;
+
+
+}
