💄 FRONT - few style fixes

--- a/frontend/src/stylesheets/UserDetail.scss
+++ b/frontend/src/stylesheets/UserDetail.scss
@@ -72,6 +72,9 @@
       width: 100%;
       transition: all 200ms;
     }
+    p{
+        text-align: center;
+    }
     .hidden{
         opacity: 0;
         transition: all 200ms;
