💄  FRONT - contacts display style

--- a/frontend/src/stylesheets/UserDetail.scss
+++ b/frontend/src/stylesheets/UserDetail.scss
@@ -136,6 +136,12 @@
     margin: auto;
 }
 
+.usersList{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 0.7rem 1rem;
+}
+
 .params{
     display: flex;
     flex-direction: column;
