--- a/frontend/src/stylesheets/UserIcon.scss
+++ b/frontend/src/stylesheets/UserIcon.scss
@@ -43,8 +43,8 @@
     .img{
         width: 10rem;
         border-radius: 100%;
-     
-        padding: 1rem;
+        display: flex;
+        padding: 1.5rem;
     }
     img{
         width: 100%;
