--- a/frontend/src/stylesheets/ProjectDetail.scss
+++ b/frontend/src/stylesheets/ProjectDetail.scss
@@ -17,6 +17,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+ 
 
     @media (min-width: v.$sm-breakpoint) {
         width: 100%;
@@ -27,7 +28,7 @@
         width: 50%;
         display: flex;
         justify-content: center;
-        height: 50vh;
+        height: 100%;
     }
 }
 
