💄 🚧 FRONT - working on contacts accessibility

--- a/frontend/src/stylesheets/UserIcon.scss
+++ b/frontend/src/stylesheets/UserIcon.scss
@@ -39,7 +39,9 @@
     padding: 0.5rem 2rem;
     gap: 1rem ;
     width: fit-content;
-    font-size: 1.8rem;
+    font-size: 1.7rem;
+    font-weight: bold;
+    text-align: center;
     .img{
         width: 10rem;
         border-radius: 100%;
