--- a/frontend/src/stylesheets/Carousel.scss
+++ b/frontend/src/stylesheets/Carousel.scss
@@ -28,6 +28,16 @@
   }
 
   .project-carousel {
+    display: flex !important;
+    align-items: center;
+    .personalNote{
+      font-size: 3rem;
+      font-weight: bold;
+      padding: 5rem;
+      text-align: center;
+      color: white;
+      text-shadow: 3px 3px v.$primary-color;
+    }
     #project-img {
       width: 100%;
     }
