--- a/frontend/src/stylesheets/_mixins.scss
+++ b/frontend/src/stylesheets/_mixins.scss
@@ -7,6 +7,8 @@
     border: none;
     box-shadow: 0 3px $shadow-color;
     font-weight: bold;
+    display: flex;
+    align-items: center;
     
     &:hover{
         cursor: pointer;
