--- a/frontend/src/stylesheets/Comment.scss
+++ b/frontend/src/stylesheets/Comment.scss
@@ -5,12 +5,12 @@
     gap: 2rem;
     align-items: center;
     border-radius: 5rem;
-    border: solid 1px v.$color-gpastel;
-    padding: 1rem;
+    padding: 2rem;
     margin-bottom: 2rem;
     width: 95%;
     margin: 2rem auto ;
     transition: all 200ms;
+    background-color: #F0F0F0;
     &:hover{
         box-shadow: 0 0px 0px 2px v.$color-gpastel;
     }
@@ -19,8 +19,9 @@
         padding: 1rem;
         display: flex;
         border-radius: 100%;
-        border: solid 2px v.$color-green;
+        background-color: white;
         box-shadow: 0 2px v.$color-green-dark;
+        border: solid 2px v.$color-green;
         img{
             width: 100%;
         }
