--- a/frontend/src/stylesheets/ProjectDetail.scss
+++ b/frontend/src/stylesheets/ProjectDetail.scss
@@ -581,6 +581,27 @@
 
 }
 
+.userActions{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    .joinProject{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+    }
+    .actions{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+    }
+}
+
+
+
 .addComment {
     width: fit-content;
     display: flex;
@@ -590,12 +611,14 @@
     margin-bottom: 3rem;
     margin-top: 1rem;
     margin: 1rem auto 3rem auto;
-    border-radius: 1rem;
-    border: solid 1px v.$color-gpastel;
+    padding: 1rem;
+    border-radius: 2rem;
+    background-color: #F0F0F0;
     &:has(textarea:focus){
-        outline: solid 1px v.$color-green;
+        outline: solid 2px v.$color-green;
     }
-    textarea{
+    textarea{  
+        background-color: #F0F0F0;
         resize: none;
         max-width: 70vw;
         min-width: 70vw;
