--- a/frontend/src/stylesheets/_variables.scss
+++ b/frontend/src/stylesheets/_variables.scss
@@ -11,6 +11,8 @@ $color-yellow-light : #ffdb5b;
 $color-red : #FF0000;
 $color-red-dark : #ce0000;
 
+$color-grey :  #F0F0F0;
+
 //text color
 $text-color: white;
 
